# jollof

./: .dockerignore  .gitignore  Dockerfile  ROADMAP.md  TODO.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
backend/: README.md  requirements.txt
backend/app/: main.py
docs/: CURSOR_PARITY.md  DEPLOY.md  DESKTOP.md  UI_REVIEW.md  VISION.md
scripts/: check-rust-network.ps1  docker-entrypoint.mjs  start-server-if-needed.mjs  start-vite-if-needed.mjs
server/: jollof-server.mjs  pty-server.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  ThemeSync.tsx
src/contexts/: DebugContext.tsx  EditorActionsContext.tsx  OutputContext.tsx  SettingsContext.tsx
src/hooks/: use-toast.ts  useFocusTrap.ts
src/lib/: agent-api.ts  agent-context.ts  agent-edits.ts  agent-prompts.ts  agent-runs.ts  agent-session.ts  agent-workspace.ts  app-links.ts  codebase-index.ts  cursor-rules.ts  debug-launch.ts  desktop-workspace.ts  diagnostics.ts  fs-api.ts  git-api.ts  key-chords.ts  language.ts  launch-json-template.ts  layout-storage.ts  local-server.ts  platform.ts  recent-folders.ts  run-api.ts  run-file.ts  settings.ts  symbols.ts  workspace-local-path.ts  workspace.ts
src/pages/: Index.tsx  NotFound.tsx
workspace/board_2/: README.md  jollof.json
workspace/board_3/: jollof.json
workspace/board_4/: jollof.json
workspace/board_5/: jollof.json
(+92 files in other folders)
